Address a button alignment issue

--- a/styles/sass/_booking-system.scss
+++ b/styles/sass/_booking-system.scss
@@ -784,3 +784,13 @@ details {
     }
   }
 }
+
+.reservation-options {
+  @media (max-width: $screen-phone) {
+
+    a {
+      margin-left: 0!important;
+      margin-right: 2em;
+    }
+  }
+}
